testData/org/elixir_lang/inspection/unresolvable_type/missing_local_type_flagged.ex
defmodule UsesMissingLocalType do
  @spec convert(<error descr="Type 'nope/0' is not defined">nope</error>()) :: :ok
  def convert(_value), do: :ok
end
